<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="DayClickListener"
                android:text="@string/monday"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="254dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="DayClickListener"
                android:text="@string/tuesday"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="DayClickListener"
                android:text="@string/wednesday"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="DayClickListener"
                android:text="@string/thursday"
                android:textColor="#ffff" />

            <Button
                android:id="@+id/button4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="DayClickListener"
                android:text="@string/friday"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="304dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="DayClickListener"
                android:text="@string/saturday"
                android:textColor="#ffff"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="0dp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:visibility="invisible">


            <TextView
                android:id="@+id/studyObj1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lesson_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/headline" />

            <TextView
                android:id="@+id/teacher1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studyObj1"
                android:text="@string/Teacher"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/lectureHall1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher1"
                android:layout_alignParentEnd="true"
                android:text="@string/Lecture_hall"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher1"
                android:text="@string/Time"
                android:textColor="@color/textColor" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="19dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/inprocess" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativelayout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/studyObj2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lesson_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/headline" />

            <TextView
                android:id="@+id/teacher2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studyObj2"
                android:text="@string/Teacher"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/lectureHall2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher2"
                android:layout_alignParentEnd="true"
                android:text="@string/Lecture_hall"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher2"
                android:text="@string/Time"
                android:textColor="@color/textColor" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="19dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/inprocess" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativelayout2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/studyObj3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lesson_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/headline" />

            <TextView
                android:id="@+id/teacher3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studyObj3"
                android:text="@string/Teacher"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/lectureHall3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher3"
                android:layout_alignParentEnd="true"
                android:text="@string/Lecture_hall"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/time3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher3"
                android:text="@string/Time"
                android:textColor="@color/textColor" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="19dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/inprocess" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativelayout3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/studyObj4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lesson_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/headline" />

            <TextView
                android:id="@+id/teacher4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studyObj4"
                android:text="@string/Teacher"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/lectureHall4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher4"
                android:layout_alignParentEnd="true"
                android:text="@string/Lecture_hall"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/time4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher4"
                android:text="@string/Time"
                android:textColor="@color/textColor" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="19dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/inprocess" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativelayout4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/studyObj5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lesson_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/headline" />

            <TextView
                android:id="@+id/teacher5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studyObj5"
                android:text="@string/Teacher"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/lectureHall5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher5"
                android:layout_alignParentEnd="true"
                android:text="@string/Lecture_hall"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/time5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher5"
                android:text="@string/Time"
                android:textColor="@color/textColor" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="19dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/inprocess" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativelayout5"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/studyObj6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lesson_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/headline" />

            <TextView
                android:id="@+id/teacher6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studyObj6"
                android:text="@string/Teacher"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/lectureHall6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher6"
                android:layout_alignParentEnd="true"
                android:text="@string/Lecture_hall"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/time6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher6"
                android:text="@string/Time"
                android:textColor="@color/textColor" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="19dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/inprocess" />

        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>